Child's name now appears and logout functionality

--- a/www/templates/parents/parentHome.html
+++ b/www/templates/parents/parentHome.html
@@ -10,7 +10,7 @@
           </div>
         </ion-content>
         <div class="bar bar-footer bar-dark">
-          <button ng-click="data.logout(data.user)" class="footerLogout footer button button-clear">Logout</button>
+          <button ng-click="data.logout()" class="footerLogout footer button button-clear">Logout</button>
           <i class="iconSize icon ion-ios-close-outline"></i>
         </div>
 </ion-view>
