--- a/www/templates/registration/registration.html
+++ b/www/templates/registration/registration.html
@@ -2,7 +2,7 @@
         <ion-content class="content padding-top">
           <div class="list registration">
             <label class="registrationPassword item item-input">
-              <input type="text" name="name" value="" placeholder="Parent Name" ng-model="data.parent.name" required>
+              <input type="text" name="name" value="" placeholder="Parent Name" ng-model="data.parent.name" ng-required="true">
             </label>
             <label class="registrationPassword item item-input">
               <input type="email" name="name" value="" placeholder="Parent Email" ng-model="data.parent.email" required>
