--- a/www/css/style.css
+++ b/www/css/style.css
@@ -102,3 +102,8 @@ a{
   margin-left: 35%;
   font-size: 35px;
 }
+/*Specific to childChores.html*/
+.choreFooterLogoutButton{
+  margin-left: 23%;
+  font-size: 35px;
+}
