--- a/www/templates/parents/parentHome.html
+++ b/www/templates/parents/parentHome.html
@@ -3,9 +3,7 @@
           <img class="loginImage" src="/img/choreScoreInitials.png" alt="" />
           <div class="loginContainer">
             <h1 class="loginTitle">Children:</h1>
-            <button class="loginButton" type="button" name="button"><a href="/#/login/parent"> {{data.info[1].Children[1].name}} </a></button>
-            <button class="loginButton" type="button" name="button"><a href="/#/login/parent"> {{data.info[1].Children[2].name}} </a></button>
-            <button class="loginButton" type="button" name="button"><a href="/#/login/parent"> Add Child </a></button>
+            <button class="loginButton" type="button" name="button" ng-click="data.addChildFromParentHome()"> Add Child </button>
           </div>
         </ion-content>
         <div class="bar bar-footer bar-dark">
