--- a/www/templates/registration/registration.html
+++ b/www/templates/registration/registration.html
@@ -13,86 +13,6 @@
             <label class="repeatPassword item item-input">
               <input type="password" name="name" value="" placeholder="Repeat Password" ng-model="data.parent.password" required>
             </label>
-            <label class="registrationPassword item item-input">
-              <input type="text" name="name" value="" placeholder="Child Name" ng-model="data.child.name" required>
-            </label>
-            <label class="registrationPassword item item-input">
-              <input type="text" name="name" value="" placeholder="Child Username" ng-model="data.child.username" required>
-            </label>
-            <label class="registrationPassword item item-input">
-              <input type="password" name="name" value="" placeholder="Child Password" required>
-            </label>
-            <label class="repeatPassword item item-input">
-              <input type="password" name="name" value="" placeholder="Repeat Password" ng-model="data.child.password" required>
-            </label>
-            <div>
-              <h4 ng-click="data.registerMoreChildren()" ng-show="data.registerMore === true" class="moreChildren">Click for additional child</h4>
-            </div>
-            <div class="" ng-show="data.registerMore2 === true">
-              <label class="registrationPassword item item-input">
-                <input type="text" name="name" value="" placeholder="Child 2 Name" ng-model="data.parent.name" required>
-              </label>
-              <label class="registrationPassword item item-input">
-                <input type="text" name="name" value="" placeholder="Child 2 Username">
-              </label>
-              <label class="registrationPassword item item-input">
-                <input type="password" name="name" value="" placeholder="Child 2 Password">
-              </label>
-              <label class="repeatPassword item item-input">
-                <input type="password" name="name" value="" placeholder="Repeat Password">
-              </label>
-              <div>
-                <h4 ng-click="data.registerMoreChildren2()" ng-show="data.registerMore2 === true && data.registerMore3 !== true" class="moreChildren">Click for additional child</h4>
-              </div>
-            </div>
-            <div class="" ng-show="data.registerMore3 === true">
-              <label class="registrationPassword item item-input">
-                <input type="text" name="name" value="" placeholder="Child 3 Name" ng-model="data.parent.name" required>
-              </label>
-              <label class="registrationPassword item item-input">
-                <input type="text" name="name" value="" placeholder="Child 3 Username">
-              </label>
-              <label class="registrationPassword item item-input">
-                <input type="password" name="name" value="" placeholder="Child 3 Password">
-              </label>
-              <label class="repeatPassword item item-input">
-                <input type="password" name="name" value="" placeholder="Repeat Password">
-              </label>
-              <div>
-                <h4 ng-click="data.registerMoreChildren3()" ng-show="data.registerMore3 === true && data.registerMore4 !== true" class="moreChildren">Click for additional child</h4>
-              </div>
-            </div>
-            <div class="" ng-show="data.registerMore4 === true">
-              <label class="registrationPassword item item-input">
-                <input type="text" name="name" value="" placeholder="Child 4 Name" ng-model="data.parent.name" required>
-              </label>
-              <label class="registrationPassword item item-input">
-                <input type="text" name="name" value="" placeholder="Child 4 Username">
-              </label>
-              <label class="registrationPassword item item-input">
-                <input type="password" name="name" value="" placeholder="Child 4 Password">
-              </label>
-              <label class="repeatPassword item item-input">
-                <input type="password" name="name" value="" placeholder="Repeat Password">
-              </label>
-              <div>
-                <h4 ng-click="data.registerMoreChildren4()" ng-show="data.registerMore4 === true && data.registerMore5 !== true" class="moreChildren">Click for additional child</h4>
-              </div>
-            </div>
-            <div class="" ng-show="data.registerMore5 === true">
-              <label class="registrationPassword item item-input">
-                <input type="text" name="name" value="" placeholder="Child 5 Name" ng-model="data.child.name" required>
-              </label>
-              <label class="registrationPassword item item-input">
-                <input type="text" name="name" value="" placeholder="Child 5 Username">
-              </label>
-              <label class="registrationPassword item item-input">
-                <input type="password" name="name" value="" placeholder="Child 5 Password">
-              </label>
-              <label class="repeatPassword item item-input">
-                <input type="password" name="name" value="" placeholder="Repeat Password">
-              </label>
-            </div>
           </div>
-          <button class="submitRegistration" type="button" name="button" ng-click="data.register(data.parent, data.child)">Register</button>
+          <button class="submitRegistration" type="button" name="button" ng-click="data.register(data.parent)">Register</button>
     </ion-view>
