--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,11 +4,12 @@
 }
 a{
   text-decoration: none !important;
-  color: black !important;
+  color: white !important;
 }
 .content{
   text-align: center;
   background: linear-gradient(135deg, rgba(76,76,76,1) 0%,rgba(89,89,89,1) 12%,rgba(102,102,102,1) 25%,rgba(71,71,71,1) 39%,rgba(44,44,44,1) 50%,rgba(17,17,17,1) 60%,rgba(43,43,43,1) 76%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%,rgba(19,19,19,1) 100%);
+  overflow: scroll;
 }
 
 /*Specific to splash.html*/
@@ -71,12 +72,12 @@ a{
   border-radius: 5px;
   padding: 1%;
   font-size: 30px;
+  margin-bottom: 15%;
 }
 .registration{
   width: 90%;
   margin-left: 5%;
-  margin-bottom: 0;
-  margin-top: 5%;
+  margin-top: 15%;
   overflow: scroll;
 }
 .registrationPassword{
@@ -111,21 +112,43 @@ a{
 }
 
 /*Specific to parentChildShow.html*/
+.parentChildShowFooterHome{
+  color: white;
+  margin-left: 24%;
+  margin-right: 1%;
+}
+.parentChildShowFooterLogout{
+  color: white;
+  margin-right: 1%;
+  margin-left: 3%;
+}
 .choreList{
   background-color: white;
   width: 80%;
   height: 200px;
-  font-size: 30px;
+  font-size: 20px;
   padding: 2%;
   margin-left: 10%;
-  margin-bottom: 3%;
+  margin-bottom: 5%;
   border-radius: 10px;
   overflow: scroll;
 }
-.choreDetails{
+.choreDetailsName{
   width: 80%;
   margin-left: 10%;
-  padding: 1%;
+  margin-bottom: 3%;
+  padding: 2%;
+}
+.choreDetailsNotes{
+  width: 80%;
+  height: 100px;
+  margin-left: 10%;
+  padding: 2%;
+  margin-bottom: 5%;
+}
+.choreNotesTextArea{
+  text-align: center;
+  height: 90px
 }
 .choreButton{
   background-color: gray;
@@ -148,4 +171,41 @@ a{
   width: 55%;
   font-size: 25px;
   border-radius: 55px;
+}
+.addRewardButton{
+  background-color: gray;
+  color: black;
+  width: 45%;
+  font-size: 25px;
+  border-radius: 55px;
+}
+.parentShowTitle{
+  color: white;
+}
+/*specific to parentHome.html*/
+.addChildButton{
+  background-color: gray;
+  color: white;
+  width: 30%;
+  font-size: 20px;
+  margin-bottom: 10%;
+  border-radius: 55px;
+}
+.showChildButton{
+  background-color: gray;
+  color: white !important;
+  width: 45%;
+  font-size: 30px;
+  margin-bottom: 10%;
+  border-radius: 55px;
+}
+.parentShowTitle{
+  color: white;
+}
+.parentFooterLogout{
+  margin-left: 37%;
+  margin-right: 2%;
+}
+.iconSize{
+  font-size: 34px;
 }
