--- a/www/templates/login/login.html
+++ b/www/templates/login/login.html
@@ -11,7 +11,7 @@
               </label>
             </div>
             <button class="login" type="button" name="button" ng-click="data.login(data.user)">Log In</button>
-            <i class="thumb iconSize icon ion-android-hand"></i>
+            <!-- <i class="thumb iconSize icon ion-android-hand"></i> -->
             <h2>{{data.loginError}}</h2>
           </div>
           <a href="/#/registration"><h3 class="loginRegister">First Time? Register Here.</h3></a>
