--- a/www/templates/registration/registration.html
+++ b/www/templates/registration/registration.html
@@ -1,5 +1,6 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
+          <img class="loginImage" src="img/choreScoreInitials.png" alt="chores" />
           <div class="list registration">
             <label class="registrationPassword item item-input">
               <input type="text" name="name" value="" placeholder="Parent Name" ng-model="data.parent.name" ng-required="true">
