--- a/www/templates/children/childHome.html
+++ b/www/templates/children/childHome.html
@@ -3,7 +3,7 @@
           <img class="loginImage" src="/img/choreScoreInitials.png" alt="" />
           <div class="loginContainer">
             <h1 class="childName">Hi {{data.childName}}</h1>
-            <button class="loginButton" type="button" name="button"><a href="/#/child/{{data.id}}/chores"> Chores </a></button>
+            <button class="loginButton" type="button" name="button"><a href="/#/child/{{data.id}}/chores"> Chores</button>
             <button class="loginButton" type="button" name="button"><a href="/#/child/{{data.id}}/rewards"> Rewards </a></button>
           </div>
         </ion-content>
