--- a/www/templates/parents/children/show.html
+++ b/www/templates/parents/children/show.html
@@ -1,6 +1,6 @@
 <ion-view view-title="hello">
   <ion-content class="content padding-top">
-      <div class="" ng-show="data.showChildChores === true">
+    <div class="" ng-show="data.showChildChores === true">
         <h2 class="parentShowTitle">Chore List:</h2>
         <div class="choreList">
           <ul ng-repeat="chore in data.choreInfo">
@@ -14,7 +14,7 @@
         </div>
         <button class="addChoreButton" type="button" name="button" ng-click="data.addChildChore()" ng-show="data.showAddChoreButton === true"> Add Chore </button>
       </div>
-      <div class="list" ng-show="data.showEditChildChore === true">
+    <div class="list" ng-show="data.showEditChildChore === true">
         <label class="choreDetailsName item item-input">
           <input type="text" name="name" value="" placeholder="{{data.editChoreInfo.choreName}}" ng-model="data.editChores.choreName">
         </label>
@@ -45,6 +45,7 @@
         <ol ng-repeat="reward in data.rewardInfo">
           <li>
             <p ng-click="data.editReward(reward)"><strong>Reward:</strong> {{reward.rewardName}}</p>
+            <p ng-click="data.editReward(reward)"><strong>Points:</strong> {{reward.rewardPoints}}</p>
             <p ng-click="data.editReward(reward)"><strong>Notes:</strong> {{reward.rewardNotes}}</p>
             <hr>
           </li>
@@ -56,6 +57,9 @@
       <label class="choreDetailsName item item-input">
         <input type="text" name="name" value="" placeholder="{{data.editRewardInfo.rewardName}}" ng-model="data.editReward.rewardName">
       </label>
+      <label class="choreDetailsName item item-input">
+        <input type="number" name="name" value="" placeholder="{{data.editRewardInfo.rewardPoints}}" ng-model="data.editReward.rewardPoints">
+      </label>
       <label class="choreDetailsNotes item item-input">
         <input type="textarea" class="choreNotesTextArea" name="name" value="" placeholder="{{data.editRewardInfo.rewardNotes}}" ng-model="data.editReward.rewardNotes">
       </label>
@@ -66,6 +70,9 @@
     <div class="list" ng-show="data.showAddChildReward === true">
       <label class="choreDetailsName item item-input">
         <input type="text" name="name" value="" placeholder="Reward Name" ng-model="data.reward.name">
+      </label>
+      <label class="choreDetailsName item item-input">
+        <input type="number" name="name" value="" placeholder="Reward Points" ng-model="data.reward.points">
       </label>
       <label class="choreDetailsNotes item item-input">
         <input type="textarea" class="choreNotesTextArea" name="name" value="" placeholder="Reward Notes" ng-model="data.reward.notes">
