--- a/www/templates/children/childHome.html
+++ b/www/templates/children/childHome.html
@@ -3,12 +3,13 @@
           <img class="loginImage" src="/img/choreScoreInitials.png" alt="" />
           <div class="loginContainer">
             <h1 class="childName">Hi {{data.childName}}</h1>
+            <h3 class="childShowInfo">You currently have {{data.childPoints}} points.</h3>
             <button class="loginButton" type="button" name="button"><a href="/#/child/{{data.id}}/chores"> Chores</button>
             <button class="loginButton" type="button" name="button"><a href="/#/child/{{data.id}}/rewards"> Rewards </a></button>
           </div>
         </ion-content>
         <div class="bar bar-footer bar-dark footerLogout">
-          <button ng-click="data.logout(data.user)" class="footerLogoutButton" footer button button-clear>Logout</button>
+          <button ng-click="data.logout(data.user)" class="childShowFooter footerLogoutButton" footer button button-clear>Logout</button>
           <i class="iconSize icon ion-ios-close-outline"></i>
         </div>
 </ion-view>
